arc-web/src/main/webapp/css/style.css
@charset "UTF-8";

/* base font size from rem */
html {
	font-size: calc(0.6vw + 6px);
}

body {
	background-color: #F7F7FF;
    position: relative;
    font-size : 0.8rem;
    line-height: 1.25rem;
}


/* Override bootstrap css */

.w-fitcontent
{
	width:fit-content;
}

textarea 
{
	    border: 2px solid transparent;
	    overflow-x: hidden; /* firefox fix for not matching rows number*/
}

.border-light {
	border-color: #dddddd !important;
}

.container-fluid {
	padding-right: 0;
    padding-left: 0;
}

.row {
    margin-right: 0;
    margin-left: 0;
}

.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
	padding-right: 0.3rem;
    padding-left: 0.3rem;
}	

.mt-4-5
{
	margin-top: 3rem!important;
}



.form-control{
	width: auto;
	font-size: inherit;
}

.bg-body {
	background-color: #ffffff !important;
}

.text-body {
    color: #000000!important;
}
    

.top-0 {
	top:0!important;
}

.left-0 {
	left:0!important;
}

.zindex-1000 {
	z-index:1000!important;
}


.btn-primary, .btn-secondary{
	line-height:0.9rem;
}

.btn-outline-primary, .btn-primary  {
    background-color: #222222;
    color: #ffffff;
    border-color: #007bff;
}

.btn-secondary {
    color: #fff;
    background-color: #6c887d;
    border-color: #6c757d;
}

.btn-group-sm>.btn, .btn-sm {
    padding: .25rem .3rem 0.25rem 0.3rem;
    font-size: .8rem;
    line-height: 0.8rem;
    border-radius: .2rem !important;
    margin: 0.25rem;
}

li.nav-item {
    color: #000000;
}

li.nav-item.active {
	        border-bottom: 2px solid #000000;
}

.navbar-light .navbar-nav .nav-link.active {
    color: rgba(0,0,0,.9);
    border-bottom: 2px solid #000000;
}
.mt-0-1, .my-0-1 {
    margin-top:0.1rem !important;
}

.mt-0-2, .my-0-2 {
    margin-top:0.2rem !important;
}

.navbar-light .navbar-nav .nav-link {
    color: #000022;
}

li.nav-item {
    color: #000000;
    text-align: center;
    margin-bottom: auto;
}

.navbar-brand {
    font-size: 2rem;
}

.nav-tabs {
    background-color: #ffffff;
}

.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
/*     color: #495057; */
/*     border-bottom: 2px solid #000000; */
/*     border-top: none; */
/*     border-left: none; */
/*     border-right: none; */
	font-weight:bold;
}

.nav-tabs .nav-link {
    height: 1.6rem;
    padding-top: 0.2rem;
    color: #000022;
}

.nav-link {
    display: block;
    padding: 0rem 0rem;
/* 	font-weight: 500; */
}

.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
    color: #000022;
    background-color: transparent;
}

.btn-success {
    color: #fff !important;
    background-color: #28a745;
    border-color: #28a745;
}

.bg-primary {
    background-color: #005baf!important;
}

.badge-primary
{
	background-color: #005baf!important;
}

/* End of bootstap revamp */





li.nobullet
{
	list-style-type: none;
}


.collapser {
	cursor: pointer;
}

.collapser {
	display: inline-block;
	padding-right: 1em !important;
}

.collapseOpened .collapser {
	background: transparent url('../img/slideUp.png') right center no-repeat;
}

.collapseClosed .collapser {
	background: transparent url('../img/slideDown.png') right center
		no-repeat;
}

.alert {
	display: none;
}

.hide {
	position: absolute !important;
	top: -9999px !important;
	left: -9999px !important;
}

.font-smaller {
	font-size:smaller;
}

th.sort {
	width: 18px;
}

a.onglet {
	border: 1px solid;
	background-color: #ffffff;
	width: 90px;
	display: inline-block;
	text-decoration: none;
	text-align: center;
	padding-top: 2px;
	height: 15px;
}

div.titre1 {
	font-size: 18px;
	font-weight: bold;
	text-align: left;
	margin-bottom: 10px;
}

div.titre2 {
	font-size: 13px;
	font-weight: bold;
	text-align: center;
	margin-bottom: 10px;
}

div.bandeau {
	background-color: #005599;
	color: #ffffff;
	font-weight: bold;
	padding-top: 2px;
	border: 0px;
	height: 18px;
	font-size: 14px;
	overflow: hidden;
}

div.container {
	margin-left: 10px;
	margin-bottom: 5px;
}

select {
	font-size: inherit;
	background-color: inherit;
	font-family: inherit;
	border: none;
}

input {
	text-align: center;
	font-size: inherit;
	font-family: inherit;
}

[class="button"] {
	font-weight: bold;
	background-color: #ffffff;
	height: 18px;
	width: 30px;
	text-align: center;
	font-family: inherit;
	cursor: hand;
	cursor: pointer;
}

[class^="button.ctrl"] {
	font-weight: bold;
	background-color: #ffffff;
	height: 18px;
	width: 80px;
	text-align: center;
	font-family: inherit;
	cursor: hand;
	cursor: pointer;
}

.smallButton {
	font-weight: bold;
	background-color: #ffffff;
	height: 12px;
	width: 40px;
	text-align: center;
	font-family: inherit;
	cursor: hand;
	cursor: pointer;
	border: 1px solid #aaa;
	padding-bottom: 2px;
}

.hand {
	cursor: hand;
	cursor: pointer;
}

input[type='checkbox'] {
	width: 0.75rem;
    margin-left: 0.05rem;
}

input[type='text'] {
	width: 99%;
	background: inherit;
	border: none;
	height: 100%;
	text-align: left;
	text-overflow: ellipsis;
}
/* ... */

